# cda-transparencia

./: .env.example  .gitignore  .pdf_content_registry.json  .pdf_location_registry.json  .pdf_tracking.json  .roomodes  .wranglerignore  404.html  API_DOCUMENTATION.md  BASE.md  BUDGET_EXTRACTION_SUMMARY.md  CATALOG_INTEGRATION.md  CHART_VISUALIZATION_FIXES_FINAL.md  CLEANUP_SUMMARY.md  CLOUDFLARE_CONFIG_QUICK_REF.md  CLOUDFLARE_DATA_SOLUTION.md  CLOUDFLARE_SETUP.md  CNAME  CODE_OF_CONDUCT.md  COMPARISON.md  COMPLEMENTARY_DATA_ARCHITECTURE.md  COMPLEMENTARY_DATA_IMPLEMENTATION_SUMMARY.md  COMPLETE_DATA_INTEGRATION_SUMMARY.md  COMPLETE_ORGANIZATION_OVERVIEW.md  COMPLETION_SUMMARY.md  COMPONENT_LIBRARY.md  COMPREHENSIVE_TRANSPARENCY_ENHANCEMENT_SUMMARY.md  CRITICAL_DATA_INTEGRATION_PLAN.md  DATA.md  DATABASE_BACKEND_FRONTEND_PLAN.md  DATA_ACCESS_IMPLEMENTATION_SUMMARY.md  DATA_ARCHITECTURE.md  DATA_ORGANIZATION.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_READY.md  DEPLOYMENT_SETUP_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  (+147 more)
"src/: diagnostic.py
.github/: dependabot.yml
.kilocode/: mcp.json
.qwen/: PROJECT_SUMMARY.md
.roo/: mcp.json
api/: categories.json  dashboard_summary.json  index.html  index.json  master_index.json  pdf_manifest.json  pdf_metadata.json  transparency.json
assets/: BudgetAnalysisChartEnhanced-8_RI759_.js  BudgetAnalysisChartEnhanced-BZ3YwyNo.js  BudgetAnalysisChartEnhanced-BiSWF1Sp.js  BudgetAnalysisChartEnhanced-CCr9urDb.js  BudgetAnalysisChartEnhanced-CPAcRHMd.js  BudgetAnalysisChartEnhanced-CQdygYUc.js  BudgetAnalysisChartEnhanced-Ce0DbyeZ.js  BudgetAnalysisChartEnhanced-D0-XGrRg.js  BudgetAnalysisChartEnhanced-D2mMWnD8.js  BudgetAnalysisChartEnhanced-DZhd8966.js  BudgetAnalysisChartEnhanced-I3nqgFD2.js  BudgetAnalysisChartEnhanced-c47yIPXn.js  BudgetAnalysisChartEnhanced-euK8sndE.js  DebtAnalysisChart-B7Vj4vZ8.js  DebtAnalysisChart-BEhjDSMX.js  DebtAnalysisChart-BG6zYEcj.js  DebtAnalysisChart-BRxYkIn9.js  DebtAnalysisChart-BcgDh0PT.js  DebtAnalysisChart-CGBSWzrr.js  DebtAnalysisChart-CKxjZh3f.js  DebtAnalysisChart-Dhhshr2A.js  DebtAnalysisChart-DxmRLT2E.js  DebtAnalysisChart-YQ_Lj8SF.js  DebtAnalysisChart-eDqOSARN.js  DebtAnalysisChart-g8_5_y35.js  DebtAnalysisChart-patO_It7.js  FunnelChart-LirAc-AJ.js  FunnelChart-fktZylAN.js  LocalDataService-B2GlZkD7.js  MarkdownDataService-BpzQlmF_.js  SankeyDiagram-Dkr390QI.js  SankeyDiagram-K2zKZuN1.js  (+128 more)
carmen_transparencia/: Dockerfile  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  cli.py  data_access.py  data_extraction.py  database.py  database_export.json  example_usage.py  final_demo.py  final_verification.py  functional_test.py  import_existing_data.py  insert_sample_data.py  integrate_existing_data.py  integration_test.py  process_existing_test.py  processing.py  pyproject.toml  requirements.txt  system.py  test_modules.py  test_one_file.py
carmen_transparencia/scripts/: populate_db.py  process_excel_data.py
carmen_transparencia/src/carmen_transparencia/: cli.py  database.py
carmen_transparencia/tests/: test_cli.py
carmen_transparencia/transparency_data/: transparency.db  transparency_report_20250911_170301.md
(+5962 files in other folders)
